--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-PyMySQL
-twilio
-python-dotenv
-gunicorn
-cryptography
+Flask==2.3.3
+PyMySQL==1.1.0
+twilio==8.10.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+cryptography==41.0.7
